--- a/README.org
+++ b/README.org
@@ -45,7 +45,7 @@ Blog from Org mode to WordPress.
       -  [[#migrating-org-mode-files-to-org2blog-files][Migrating Org Mode Files To Org2Blog Files]]
       -  [[#export-wordpress-to-org][Export WordPress to Org]]
       -  [[#using-entry-templates][Using Entry Templates]]
-      -  [[#tracking-posts][Tracking Posts]]
+      -  [[#tracking-entries][Tracking Entries]]
       -  [[#doing-things-after-saving-and-publishing][Doing Things After Saving And Publishing]]
     -  [[#some-questions-and-some-answers][Some Questions And Some Answers]]
       -  [[#why-does-org2blog-talk-about-save-view-publish-and-trash-so-much][Why Does Org2Blog Talk About Save, View, Publish, And Trash So Much?]]
@@ -818,7 +818,7 @@ The former takes some reading and study of the code to utilize. It will be
 simplified in a future release. The latter is a template that is inserted
 without any value substitution.
 
-*** Tracking Posts
+*** Tracking Entries
 :PROPERTIES:
 :ID:       org_gcr_2019-03-06T17-15-24-06-00_cosmicality:EA8A1588-DC5B-4D69-84F4-B988B35FA640
 :END:
