Readme sample post

--- a/README.org
+++ b/README.org
@@ -1095,6 +1095,48 @@ Both APIs are required to get the job done.
 For historical reasons the WordPress API client is implemented inside of
 =metaWeblog=.
 
+* Sample Posts
+
+There are so many ways to work with posts. Here are some real world examples.
+
+** Buffer Post
+
+#+name: org_gcr_2019-08-10T12-52-53-05-00_cosmicality_C94EF540-A6A5-4148-B365-CE5F217F55FB
+#+begin_src org
+,#+BLOG: wisdomandwonder
+,#+POSTID: 11659
+,#+ORG2BLOG:
+,#+DATE: [2019-02-01 Fri 19:38]
+,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
+,#+CATEGORY: Emacs,
+,#+TAGS: MathJax, Org2Blog, Org mode, WordPress
+,#+TITLE: Blogging With Emacs🐃 From Org2Blog🦄 to WordPress
+
+[mathjax]
+
+Blogging from Org2Blog to WordPress /just works/ and that is just about all
+there is to it. All of the markup works. Even MathJax works:
+#+end_src
+
+** Subtree Post
+
+#+name: org_gcr_2019-08-10T12-52-53-05-00_cosmicality_FDFDFCA0-614F-4C6A-8B38-ACC1D3A4118B
+#+begin_src org
+,* VIM Changes Acronym to "VIM Imitates eMacs"
+:PROPERTIES:
+:BLOG:     wisdomandwonder
+:DATE: [2019-03-21 Thu 07:09]
+:OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
+:CATEGORY: Emacs,
+:POST_TAGS: emacs
+:ID:       o2b:3F021C4E-E80A-4DD4-AA13-A91835F0023D
+:POST_DATE: [2019-03-21 Thu 07:26]
+:POSTID:   12271
+:END:
+
+I ran ~M-x butterfly~ and we both smiled as VIM and Emacs converge.
+#+end_src
+
 * Changelog
 :properties:
 :toc:      0
