--- a/README.org
+++ b/README.org
@@ -699,6 +699,7 @@ Here is how they look and work.
 
 **** Plain Source Box Format
 
+
 First make sure that Org2Blog will generate plain on =<pre>= tags like this:
 
 #+name: org_gcr_2019-08-11T13-09-58-05-00_cosmicality_DAD815F1-2D09-421F-99F8-9187F6A72FEA
@@ -724,7 +725,11 @@ then it's automatically generated name will be used. For example:
 
   [[file:/images/SourceBlockNormalNoname.png]]
 
-**** SyntaxHighlighter Evolved
+**** SyntaxHighlighter Evolved 
+
+[[https://wordpress.org/plugins/syntaxhighlighter/][SyntaxHighlighter Evolved]] is an extremely popular plugin for rendering source
+code. It supports a bunch of languages and configuration parameters (see [[https://en.support.wordpress.com/code/posting-source-code/][here]])
+in addition to open-source custom plugins for other language.
 
 To use this first you need to set the variable
 ~org2blog/wp-use-sourcecode-shortcode~ to ~t~.
@@ -740,25 +745,24 @@ Configure your source blocks for SyntaxHighlighter like this:
 #+begin_src org
 ,#+caption: My caption is my passport
 ,#+name: Demo
-,#+attr_wp: :syntaxhl light="true"
 ,#+BEGIN_SRC
 (setq pass "Hi")
 ,#+END_SRC
 #+end_src
 
-The =:syntaxhl= property tells Org2Blog that everything following it is a
-configuration parameter for SyntaxHighlighter. Those values get passed on.
-
-The =#+ATTR_WP= line immediately *must* immediately precede the =#+BEGIN_SRC= line.
+SyntaxHighlighter Evolved always uses the global configuration unless you
+override it with the line ~#+attr_wp: :syntaxhl light="true"~ placed before the
+source block. The =:syntaxhl= property tells Org2Blog that everything following
+it is a configuration parameter for SyntaxHighlighter. Those values get passed
+on. The =#+ATTR_WP= line immediately *must* immediately precede the =#+BEGIN_SRC=
+line. It is easier though to configure it globally and never touch it again. 
 
 With SyntaxHighlighter Evolved enabled:
 
   [[file:/images/SourceBlockSyntaxHighlighterExposed.png]]
 
-[[https://wordpress.org/plugins/syntaxhighlighter/][SyntaxHighlighter Evolved]] is an extremely popular plugin for rendering source
-code. It supports a bunch of languages and configuration parameters (see [[https://en.support.wordpress.com/code/posting-source-code/][here]])
-in addition to open-source custom plugins for other language.
-
+  [[file:/images/SourceBlockSyntaxHighlighterExposedNoName.png]]
+  
 Sometimes your source block contents cause this plugin to do the unexpected.
 It will look at best horrible and more likely just wrong. Then to put it
 simply your first reaction will be "Why doesn't this work😠?!" For example,
