--- a/docs/TestPlan.org
+++ b/docs/TestPlan.org
@@ -195,6 +195,8 @@ These are commands that insert markup into your post.
     - [ ] Images
   - [ ] Study Installation
   - [ ] Test package
+    - Start a separate Emacs instance with an awareness of how Emacs is loading
+      Org2Blog from where
 
 * Documents
 
